# lily

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
sandbox/: Dockerfile  README.md  TROUBLESHOOTING.md  lilyctl  up
sandbox/kit/: spec.yaml
sandbox/scripts/: entrypoint  lily-sandbox-up  lilyctl
sandbox/scripts/lib/: banner.sh  config.sh  matrix.sh  ngrok.sh  opencode.sh  supervise.sh  util.sh
src/: config.rs  db.rs  discord.rs  format.rs  main.rs  opencode.rs  runner.rs  scheduler.rs  suffix.rs  worktree.rs
src/application/: chat.rs  commands.rs  config.rs  mod.rs  session_runtime.rs  task_runner.rs
src/cli/: mod.rs
src/connector/: discord.rs  git.rs  matrix.rs  mod.rs  opencode.rs  router.rs  sqlite.rs
src/domain/: delivery.rs  mod.rs  rendering.rs  session.rs  task.rs  worktree.rs
tests/: worktree.rs
