[package]
name = "lily"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
croner = "3.0.1"
futures-util = "0.3.32"
matrix-sdk = { version = "0.18.0", default-features = false, features = ["sqlite", "e2e-encryption", "markdown", "automatic-room-key-forwarding"] }
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls", "query"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serenity = "0.12.5"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
